# PawnFileGate

./: .gitignore  CMakeLists.txt  FileGate.inc  PawnREST.inc  README.md  main.cpp  omp_easing.inc  plugin.def  plugin.h
.github/workflows/: build.yml  main.yml  sync.yml
ci/: pawnrest_smoke_test.pwn
docker/: build.sh
docker/build_ubuntu-18.04/: Dockerfile  docker-entrypoint.sh
docker/build_ubuntu-22.04-static-ssl/: Dockerfile  docker-entrypoint.sh
example/: 01_server_routes.pwn  02_file_routes_and_ops.pwn  03_json_nodes.pwn  04_outbound_uploads.pwn  05_outbound_requests.pwn  06_websocket_client.pwn  07_crc_utils.pwn  08_request_input_fallbacks.pwn  09_discord_webhook.pwn
src/: entry_samp.cpp  main.cpp
src/pawnrest/: component.inl  core_samp.inl  entry_natives.inl  entry_shared.inl  json.inl  pawnrest_impl.hpp  preamble.inl  types.inl  utils.inl
tests/: utils_tests.cpp
wiki/: API-Reference.md  Callbacks.md  Getting-Started.md  Home.md  JSON-Node-Guide.md  Migration-from-pawn-requests.md  Outbound-HTTP-Guide.md  Troubleshooting.md  Use-Cases.md  WebSocket-Guide.md  _Sidebar.md
